--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   box-sizing: border-box;
   height: 100%;
+  max-width: 100%;
 }
 .input {
   font-size: 1.5rem;
@@ -14,9 +15,9 @@
 }
 .submit {
   height: auto;
-  padding: 1rem;
   aspect-ratio: 1;
   font-size: 1.5rem;
+  padding: 0.5rem;
   border: none;
   background-color: $color-secondary;
   color: $color-light;
